<resources>
    <string name="app_name">UranaiApp</string>
    <string name="title">占いアプリ</string>
    <string name="name">氏名</string>
    <string name="birthday">生年月日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="bloodType">血液型</string>
    <string name="type">型</string>

    <string-array name="bloodTypes">
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>

    <string name="sex">性別</string>
    <string name="men">男性</string>
    <string name="women">女性</string>
    <string name="commit">占う</string>

    <string name="title_activity_result">ResultActivity</string>

    <string name="result">"さんの運勢は・・・"</string>
    <string-array name="results">
        <item>いいことが起きるでしょう！</item>
        <item>最悪の1日になるでしょう！</item>
        <item>微妙な1日になるでしょう！</item>
        <item>普通の1日になるでしょう！</item>
        <item>大きな決断をするでしょう！</item>
        <item>異性に告白されるでしょう！</item>
        <item>落とし物をするでしょう！</item>
        <item>忘れ物をするでしょう！</item>
        <item>問題を解決できるでしょう！</item>
        <item>災難が起きるでしょう！</item>
    </string-array>
</resources>