<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!--アプリのタイトル-->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textSize="@dimen/title_textSize" />

    <!--氏名-->
    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/titleTextView"
        android:layout_marginTop="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_margin"
            android:inputType="textPersonName" />
    </LinearLayout>

    <!--生年月日タイトル-->
    <TextView
        android:id="@+id/birthdayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/nameLayout"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/birthday"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!--生年月日コンボボックス-->
    <LinearLayout
        android:id="@+id/birthdayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/birthdayTextView"
        android:layout_marginTop="@dimen/view_margin"
        android:orientation="horizontal">

        <!--年-->
        <Spinner
            android:id="@+id/yaerSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!--月-->
        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!--日-->
        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <!--血液型-->
    <LinearLayout
        android:id="@+id/bloodTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/birthdayLayout"
        android:layout_marginTop="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bloodType"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/bloodSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_margin"
            android:entries="@array/bloodTypes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_margin"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <!--性別-->
    <LinearLayout
        android:id="@+id/sexLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bloodTypeLayout"
        android:layout_marginTop="@dimen/view_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/menRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/men" />

            <RadioButton
                android:id="@+id/womenRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/women" />
        </RadioGroup>

    </LinearLayout>

    <!--実行ボタン-->
    <Button
        android:id="@+id/divineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sexLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/view_margin"
        android:text="@string/commit" />

</RelativeLayout>